<resources>
    <string name="app_name">ProxiTask</string>

    <!--Buttons-->
    <string name="btn_login_email">Login with account email</string>
    <string name="btn_create_account">Create an account</string>
    <string name="btn_create_my_account">Create my account</string>
    <string name="btn_login">Login</string>
    <string name="btn_save_task">Save Task</string>
    <string name="btn_discard_notification">Discard</string>

    <string name="btn_apply_task">Apply for the task</string>
    <string name="btn_apply_task_applied">Task applied</string>

    <string name="btn_navigate">Navigate</string>
    <string name="btn_call">Call</string>
    <string name="btn_done">Done</string>

    <string name="btn_assign">Assign</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_hire">Hire</string>

    <!--Links-->
    <string name="lnk_back_to_login"><u>Already have an account?Back to Login</u></string>
    <string name="lnk_createaccound"><u>Doesn\'t have an account?Create now</u></string>

    <!--Labels-->
    <string name="txt_account_email"> Account Email</string>
    <string name="txt_username">User Name</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_forgotpassword"><u>Forgot Password</u></string>

    <!--View Titles-->
    <string name="title_activity_login_with_email">LoginWithEmailActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_user_main">UserMainActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Update Profile</string>

    <!--Placeholders-->
    <string name="ph_no_tasks_hired">It seems you are not hired on any tasks.</string>
    <string name="ph_no_tasks_posted">It seems you have not created any tasks yet.</string>
    <string name="ph_no_tasks_completed">It seems you have not completed any tasks yet.</string>
    <string name="ph_no_tasks_applied">It seems you have not applied any tasks yet.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_task_title">Title</string>
    <string name="txt_task_desc">Describe the task here</string>
    <string name="txt_reward">Set up the rewards</string>
    <string name="txt_date">Choose a date</string>
    <string name="txt_address">Enter your address</string>
    <string name="txt_phone_number">Enter your phone number</string>
    <string name="txt_within_km">Within how many kms</string>

    <!--Tabs-->
    <string name="tab_to_do">Works to do</string>
    <string name="tab_posted">Posted tasks</string>
    <string name="tab_completed">Completed</string>

</resources>
