<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingEnd="10dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    tools:context="sample.example.com.proxitask.activity.CreateTaskFragment">

    <EditText
        android:id="@+id/edt_task_title"
        android:layout_width="364dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_border_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_task_title"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_task_decrription"
        android:layout_width="364dp"
        android:layout_height="80dp"
        android:layout_above="@+id/imageView2"
        android:layout_alignEnd="@+id/edt_reward"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_border_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_task_desc"
        android:textAlignment="textStart" />

    <RelativeLayout
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/fui_transparent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/edt_reward"
            android:background="@drawable/ic_card_giftcard" />

        <EditText
            android:id="@+id/edt_reward"
            android:layout_width="302dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/imageView2"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_reward"
            android:paddingStart="30dp"
            android:textAlignment="textStart"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/fui_transparent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/edt_date"
            android:background="@drawable/ic_calender" />

        <EditText
            android:id="@+id/edt_date"
            android:layout_width="302dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/imageView3"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_date"
            android:paddingStart="30dp"
            android:textAlignment="textStart"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/fui_transparent">

        <ImageView
            android:id="@+id/imageLocator"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="9dp"
            android:background="@drawable/ic_location_on" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="302dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/imageLocator"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_address"
            android:paddingStart="30dp"
            android:textAlignment="textStart"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
    android:layout_width="364dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/fui_transparent">

        <ImageView
            android:id="@+id/wifi"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_signal_wifi_4_bar" />

        <EditText
            android:id="@+id/edt_km"
            android:layout_width="302dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/wifi"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_within_km"
            android:paddingStart="30dp"
            android:textAlignment="textStart"
            android:textSize="18sp" />
</RelativeLayout>

    <!-- Doesn't have to be set up by owner. Design changed by Lezhong  -->
    <!--<RelativeLayout-->
        <!--android:layout_width="364dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:background="@color/fui_transparent">-->

        <!--<ImageView-->
            <!--android:id="@+id/imageKm"-->
            <!--android:layout_width="47dp"-->
            <!--android:layout_height="47dp"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:background="@drawable/ic_signal_wifi_4_bar" />-->

        <!--<EditText-->
            <!--android:id="@+id/edt_km"-->
            <!--android:layout_width="302dp"-->
            <!--android:layout_height="55dp"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_marginEnd="6dp"-->
            <!--android:background="@drawable/rounded_border_edittext"-->
            <!--android:ems="10"-->
            <!--android:gravity="center"-->
            <!--android:hint="@string/txt_within_km"-->
            <!--android:paddingStart="30dp"-->
            <!--android:textAlignment="textStart"-->
            <!--android:textSize="18sp" />-->
    <!--</RelativeLayout>-->

    <Button
        style="@style/btnPrimary"
        android:id="@+id/btn_save_task"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_save_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</LinearLayout>

