<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context="sample.example.com.proxitask.LoginActivity">

    <View
        android:id="@+id/opacityFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></View>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="96dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/proxitasklogosample" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="181dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_signin_email"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_marginTop="80dp"
        android:background="#093640"
        android:fontFamily="monospace"
        android:onClick="LoginActivity"
        android:text="@string/btn_login_email"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="?attr/colorButtonNormal"
        android:fontFamily="monospace"
        android:onClick="RegisterActivity"
        android:text="@string/btn_create_account"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin_email" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_with_google"
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"

        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_account"
        app:layout_constraintVertical_bias="0.033" />

</android.support.constraint.ConstraintLayout>
